--- a/configs/cr_inbetweener_full.yaml
+++ b/configs/cr_inbetweener_full.yaml
@@ -45,7 +45,7 @@ batch_size: 8
 
 corr_weights: './corr/experiments/vtx_corr/ckpt/epoch_50.pt'
 
-imwrite_dir: ./inbetween_results/test_gap=5
+imwrite_dir: ./inbetween_results/
 
 expname: inbetweener_full
 epoch: 20
